--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Nashville Software School</title>
+        <title>NSS Political Contribution Tracker</title>
         <link rel="stylesheet" href="./styles/main.css">
     </head>
 
     <body>
         <main id="container">
-
+            <article id="politicians">
+                <!-- politicians render here -->
+            </article>
         </main>
 
         <script type="module" src="./scripts/main.js"></script>
