added a companies directory; added Company.js, CompanyList.js, companyProvider.js; added headers to the different articles; added basic flex for readability when checking work.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     </head>
 
     <body>
-        <main id="container">
-            <article id="politicians">
+        <main id="container" class="flex">
+            <article id="politicians" class="flexwrap">
                 <!-- politicians render here -->
+            </article>
+            <article id="corporations" class="flexwrap">
+                <!-- corporatians render here -->
             </article>
         </main>
 
