added pacs directory; added PAC.js, PACList.js, pacProvider.js, and corporationDonationProvider.js; added functions to fetch resources from database.json, filter or find joined resources to locate related data on different resources, and convert said sata to an HTML representation of a PAC.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             <article id="corporations" class="flexwrap">
                 <!-- corporatians render here -->
             </article>
+            <article id="pacs" class="flexwrap">
+                <!-- pacs render here -->
+            </article>
         </main>
 
         <script type="module" src="./scripts/main.js"></script>
