added very basic styling for readability.

--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     </head>
 
     <body>
-        <main id="container" class="flex">
+        <main id="container">
+            <div id="politicianHeader" class="header"></div>
             <article id="politicians" class="flexwrap">
                 <!-- politicians render here -->
             </article>
+            <div id="corporationsHeader" class="header"></div>
             <article id="corporations" class="flexwrap">
                 <!-- corporatians render here -->
             </article>
+            <div id="pacsHeader" class="header"></div>
             <article id="pacs" class="flexwrap">
                 <!-- pacs render here -->
             </article>
